telex-station/station/bro-1.5.1/src/p.output
State 3 conflicts: 8 shift/reduce
State 47 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 87 conflicts: 19 shift/reduce
State 199 conflicts: 1 shift/reduce
State 339 conflicts: 19 shift/reduce
State 421 conflicts: 1 shift/reduce
State 428 conflicts: 1 shift/reduce
State 431 conflicts: 19 shift/reduce
State 458 conflicts: 1 shift/reduce


Grammar

    0 $accept: bro $end

    1 bro: decl_list stmt_list

    2 $@1: /* empty */

    3 bro: TOK_DEBUG $@1 expr

    4 decl_list: decl_list decl
    5          | /* empty */

    6 expr: '(' expr ')'
    7     | TOK_COPY '(' expr ')'
    8     | TOK_INCR expr
    9     | TOK_DECR expr
   10     | '!' expr
   11     | '-' expr
   12     | '+' expr
   13     | expr '+' expr
   14     | expr TOK_ADD_TO expr
   15     | expr '-' expr
   16     | expr TOK_REMOVE_FROM expr
   17     | expr '*' expr
   18     | expr '/' expr
   19     | expr '%' expr
   20     | expr TOK_AND expr
   21     | expr TOK_OR expr
   22     | expr TOK_EQ expr
   23     | expr TOK_NE expr
   24     | expr '<' expr
   25     | expr TOK_LE expr
   26     | expr '>' expr
   27     | expr TOK_GE expr
   28     | expr '?' expr ':' expr
   29     | expr '=' expr
   30     | TOK_LOCAL local_id '=' expr
   31     | expr '[' expr_list ']'
   32     | expr '$' TOK_ID
   33     | '$' TOK_ID '=' expr

   34 $@2: /* empty */

   35 expr: '$' TOK_ID func_params '=' $@2 func_body
   36     | expr TOK_IN expr
   37     | expr TOK_NOT_IN expr
   38     | '[' expr_list ']'
   39     | TOK_RECORD '(' expr_list ')'

   40 $@3: /* empty */

   41 $@4: /* empty */

   42 expr: TOK_TABLE '(' $@3 opt_expr_list ')' $@4 opt_attr
   43     | TOK_SET '(' opt_expr_list ')' opt_attr
   44     | TOK_VECTOR '(' opt_expr_list ')'
   45     | TOK_MATCH expr TOK_USING expr
   46     | expr '(' opt_expr_list ')'
   47     | expr TOK_HAS_FIELD TOK_ID
   48     | expr TOK_HAS_ATTR TOK_ID
   49     | anonymous_function
   50     | TOK_SCHEDULE expr '{' event '}'
   51     | TOK_ID
   52     | TOK_CONSTANT
   53     | pattern
   54     | TOK_THIS
   55     | '|' expr '|'

   56 expr_list: expr_list ',' expr
   57          | expr

   58 opt_expr_list: expr_list
   59              | /* empty */

   60 opt_comma: ','
   61          | /* empty */

   62 pattern: pattern '|' single_pattern
   63        | single_pattern

   64 $@5: /* empty */

   65 $@6: /* empty */

   66 single_pattern: '/' $@5 TOK_PATTERN_TEXT $@6 '/'

   67 enum_id_list: TOK_ID
   68             | enum_id_list ',' TOK_ID

   69 type: TOK_BOOL
   70     | TOK_INT
   71     | TOK_COUNT
   72     | TOK_COUNTER
   73     | TOK_DOUBLE
   74     | TOK_TIME
   75     | TOK_INTERVAL
   76     | TOK_STRING
   77     | TOK_PATTERN
   78     | TOK_TIMER
   79     | TOK_PORT
   80     | TOK_ADDR
   81     | TOK_NET
   82     | TOK_SUBNET
   83     | TOK_ANY
   84     | TOK_TABLE '[' type_list ']' TOK_OF type
   85     | TOK_SET '[' type_list ']'
   86     | TOK_RECORD '{' type_decl_list '}'
   87     | TOK_UNION '{' type_list '}'
   88     | TOK_ENUM '{' enum_id_list opt_comma '}'
   89     | TOK_LIST
   90     | TOK_LIST TOK_OF type
   91     | TOK_VECTOR TOK_OF type
   92     | TOK_FUNCTION func_params
   93     | TOK_EVENT '(' formal_args ')'
   94     | TOK_FILE TOK_OF type
   95     | TOK_FILE
   96     | resolve_id

   97 type_list: type_list ',' type
   98          | type

   99 type_decl_list: type_decl_list type_decl
  100               | /* empty */

  101 type_decl: TOK_ID ':' type opt_attr ';'

  102 formal_args: formal_args_decl_list
  103            | formal_args_decl_list ';'
  104            | /* empty */

  105 formal_args_decl_list: formal_args_decl_list ';' formal_args_decl
  106                      | formal_args_decl_list ',' formal_args_decl
  107                      | formal_args_decl

  108 formal_args_decl: TOK_ID ':' type opt_attr

  109 decl: TOK_MODULE TOK_ID ';'

  110 $@7: /* empty */

  111 decl: TOK_EXPORT '{' $@7 decl_list '}'
  112     | TOK_GLOBAL global_id opt_type init_class opt_init opt_attr ';'
  113     | TOK_CONST global_id opt_type init_class opt_init opt_attr ';'
  114     | TOK_REDEF global_id opt_type init_class opt_init opt_attr ';'
  115     | TOK_REDEF TOK_ENUM global_id TOK_ADD_TO '{' enum_id_list opt_comma '}' ';'
  116     | TOK_TYPE global_id ':' refined_type opt_attr opt_attr_attr ';'

  117 $@8: /* empty */

  118 $@9: /* empty */

  119 decl: TOK_GLOBAL_ATTR ':' $@8 '{' type_decl_list '}' ';' $@9
  120     | TOK_EVENT event_id ':' refined_type opt_attr ';'
  121     | func_hdr func_body
  122     | conditional

  123 conditional: TOK_ATIF '(' expr ')'
  124            | TOK_ATIFDEF '(' TOK_ID ')'
  125            | TOK_ATIFNDEF '(' TOK_ID ')'
  126            | TOK_ATENDIF
  127            | TOK_ATELSE

  128 opt_attr_attr: TOK_ATTR_ATTR '=' '{' type_decl_list '}'
  129              | /* empty */

  130 func_hdr: TOK_FUNCTION global_id func_params
  131         | TOK_EVENT event_id func_params
  132         | TOK_REDEF TOK_EVENT event_id func_params

  133 func_body: opt_attr '{' stmt_list '}'

  134 anonymous_function: TOK_FUNCTION begin_func func_body

  135 begin_func: func_params

  136 func_params: '(' formal_args ')' ':' type
  137            | '(' formal_args ')'

  138 refined_type: type_list '{' type_decl_list '}'
  139             | type_list

  140 opt_type: ':' type
  141         | /* empty */

  142 init_class: /* empty */
  143           | '='
  144           | TOK_ADD_TO
  145           | TOK_REMOVE_FROM

  146 $@10: /* empty */

  147 $@11: /* empty */

  148 opt_init: $@10 init $@11
  149         | /* empty */

  150 init: '{' opt_expr_list '}'
  151     | '{' expr_list ',' '}'
  152     | expr

  153 opt_attr: attr_list
  154         | /* empty */

  155 attr_list: attr_list attr
  156          | attr

  157 attr: TOK_ATTR_DEFAULT '=' expr
  158     | TOK_ATTR_OPTIONAL
  159     | TOK_ATTR_REDEF
  160     | TOK_ATTR_ROTATE_INTERVAL '=' expr
  161     | TOK_ATTR_ROTATE_SIZE '=' expr
  162     | TOK_ATTR_ADD_FUNC '=' expr
  163     | TOK_ATTR_DEL_FUNC '=' expr
  164     | TOK_ATTR_EXPIRE_FUNC '=' expr
  165     | TOK_ATTR_EXPIRE_CREATE '=' expr
  166     | TOK_ATTR_EXPIRE_READ '=' expr
  167     | TOK_ATTR_EXPIRE_WRITE '=' expr
  168     | TOK_ATTR_PERSISTENT
  169     | TOK_ATTR_SYNCHRONIZED
  170     | TOK_ATTR_ENCRYPT
  171     | TOK_ATTR_ENCRYPT '=' expr
  172     | TOK_ATTR_DISABLE_PRINT_HOOK
  173     | TOK_ATTR_RAW_OUTPUT
  174     | TOK_ATTR_MERGEABLE
  175     | TOK_ATTR_PRIORITY '=' expr
  176     | TOK_ATTR_GROUP '=' expr

  177 stmt: '{' stmt_list '}'
  178     | TOK_ALARM expr_list ';'
  179     | TOK_PRINT expr_list ';'
  180     | TOK_EVENT event ';'
  181     | TOK_IF '(' expr ')' stmt
  182     | TOK_IF '(' expr ')' stmt TOK_ELSE stmt
  183     | TOK_SWITCH expr '{' case_list '}'
  184     | for_head stmt
  185     | TOK_NEXT ';'
  186     | TOK_BREAK ';'
  187     | TOK_RETURN ';'
  188     | TOK_RETURN expr ';'
  189     | TOK_ADD expr ';'
  190     | TOK_DELETE expr ';'
  191     | TOK_LOCAL local_id opt_type init_class opt_init opt_attr ';'
  192     | TOK_CONST local_id opt_type init_class opt_init opt_attr ';'
  193     | TOK_WHEN '(' expr ')' stmt
  194     | TOK_WHEN '(' expr ')' stmt TOK_TIMEOUT expr '{' stmt_list '}'
  195     | TOK_RETURN TOK_WHEN '(' expr ')' stmt
  196     | TOK_RETURN TOK_WHEN '(' expr ')' stmt TOK_TIMEOUT expr '{' stmt_list '}'
  197     | expr ';'
  198     | ';'
  199     | conditional

  200 stmt_list: stmt_list stmt
  201          | /* empty */

  202 event: TOK_ID '(' opt_expr_list ')'

  203 case_list: case_list case
  204          | /* empty */

  205 case: TOK_CASE expr_list ':' stmt_list
  206     | TOK_DEFAULT ':' stmt_list

  207 for_head: TOK_FOR '(' TOK_ID TOK_IN expr ')'
  208         | TOK_FOR '(' '[' local_id_list ']' TOK_IN expr ')'

  209 local_id_list: local_id_list ',' local_id
  210              | local_id

  211 local_id: TOK_ID

  212 $@12: /* empty */

  213 global_id: $@12 global_or_event_id

  214 $@13: /* empty */

  215 event_id: $@13 global_or_event_id

  216 global_or_event_id: TOK_ID

  217 resolve_id: TOK_ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 10
'$' (36) 32 33 35
'%' (37) 19
'(' (40) 6 7 39 42 43 44 46 93 123 124 125 136 137 181 182 193 194
    195 196 202 207 208
')' (41) 6 7 39 42 43 44 46 93 123 124 125 136 137 181 182 193 194
    195 196 202 207 208
'*' (42) 17
'+' (43) 12 13
',' (44) 56 60 68 97 106 151 209
'-' (45) 11 15
'/' (47) 18 66
':' (58) 28 101 108 116 119 120 136 140 205 206
';' (59) 101 103 105 109 112 113 114 115 116 119 120 178 179 180 185
    186 187 188 189 190 191 192 197 198
'<' (60) 24
'=' (61) 29 30 33 35 128 143 157 160 161 162 163 164 165 166 167 171
    175 176
'>' (62) 26
'?' (63) 28
'[' (91) 31 38 84 85 208
']' (93) 31 38 84 85 208
'{' (123) 50 86 87 88 111 115 119 128 133 138 150 151 177 183 194 196
'|' (124) 55 62
'}' (125) 50 86 87 88 111 115 119 128 133 138 150 151 177 183 194 196
error (256)
TOK_ADD (258) 189
TOK_ADD_TO (259) 14 115 144
TOK_ADDR (260) 80
TOK_ALARM (261) 178
TOK_ANY (262) 83
TOK_ATENDIF (263) 126
TOK_ATELSE (264) 127
TOK_ATIF (265) 123
TOK_ATIFDEF (266) 124
TOK_ATIFNDEF (267) 125
TOK_BOOL (268) 69
TOK_BREAK (269) 186
TOK_CASE (270) 205
TOK_CONST (271) 113 192
TOK_CONSTANT (272) 52
TOK_COPY (273) 7
TOK_COUNT (274) 71
TOK_COUNTER (275) 72
TOK_DEFAULT (276) 206
TOK_DELETE (277) 190
TOK_DOUBLE (278) 73
TOK_ELSE (279) 182
TOK_ENUM (280) 88 115
TOK_EVENT (281) 93 120 131 132 180
TOK_EXPORT (282) 111
TOK_FILE (283) 94 95
TOK_FOR (284) 207 208
TOK_FUNCTION (285) 92 130 134
TOK_GLOBAL (286) 112
TOK_GLOBAL_ATTR (287) 119
TOK_ID (288) 32 33 35 47 48 51 67 68 101 108 109 124 125 202 207 211
    216 217
TOK_IF (289) 181 182
TOK_INT (290) 70
TOK_INTERVAL (291) 75
TOK_LIST (292) 89 90
TOK_LOCAL (293) 30 191
TOK_MODULE (294) 109
TOK_MATCH (295) 45
TOK_NET (296) 81
TOK_NEXT (297) 185
TOK_OF (298) 84 90 91 94
TOK_PATTERN (299) 77
TOK_PATTERN_TEXT (300) 66
TOK_PORT (301) 79
TOK_PRINT (302) 179
TOK_RECORD (303) 39 86
TOK_REDEF (304) 114 115 132
TOK_REMOVE_FROM (305) 16 145
TOK_RETURN (306) 187 188 195 196
TOK_SCHEDULE (307) 50
TOK_SET (308) 43 85
TOK_STRING (309) 76
TOK_SUBNET (310) 82
TOK_SWITCH (311) 183
TOK_TABLE (312) 42 84
TOK_THIS (313) 54
TOK_TIME (314) 74
TOK_TIMEOUT (315) 194 196
TOK_TIMER (316) 78
TOK_TYPE (317) 116
TOK_UNION (318) 87
TOK_VECTOR (319) 44 91
TOK_WHEN (320) 193 194 195 196
TOK_ATTR_ADD_FUNC (321) 162
TOK_ATTR_ATTR (322) 128
TOK_ATTR_ENCRYPT (323) 170 171
TOK_ATTR_DEFAULT (324) 157
TOK_ATTR_OPTIONAL (325) 158
TOK_ATTR_REDEF (326) 159
TOK_ATTR_ROTATE_INTERVAL (327) 160
TOK_ATTR_ROTATE_SIZE (328) 161
TOK_ATTR_DEL_FUNC (329) 163
TOK_ATTR_EXPIRE_FUNC (330) 164
TOK_ATTR_EXPIRE_CREATE (331) 165
TOK_ATTR_EXPIRE_READ (332) 166
TOK_ATTR_EXPIRE_WRITE (333) 167
TOK_ATTR_PERSISTENT (334) 168
TOK_ATTR_SYNCHRONIZED (335) 169
TOK_ATTR_DISABLE_PRINT_HOOK (336) 172
TOK_ATTR_RAW_OUTPUT (337) 173
TOK_ATTR_MERGEABLE (338) 174
TOK_ATTR_PRIORITY (339) 175
TOK_ATTR_GROUP (340) 176
TOK_DEBUG (341) 3
TOK_USING (342) 45
TOK_OR (343) 21
TOK_AND (344) 20
TOK_NE (345) 23
TOK_EQ (346) 22
TOK_GE (347) 27
TOK_LE (348) 25
TOK_NOT_IN (349) 37
TOK_IN (350) 36 207 208
TOK_DECR (351) 9
TOK_INCR (352) 8
TOK_HAS_ATTR (353) 48
TOK_HAS_FIELD (354) 47


Nonterminals, with rules where they appear

$accept (121)
    on left: 0
bro (122)
    on left: 1 3, on right: 0
$@1 (123)
    on left: 2, on right: 3
decl_list (124)
    on left: 4 5, on right: 1 4 111
expr (125)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 32 33 35 36 37 38 39 42 43 44 45 46 47 48 49
    50 51 52 53 54 55, on right: 3 6 7 8 9 10 11 12 13 14 15 16 17
    18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 36 37 45 46 47
    48 50 55 56 57 123 152 157 160 161 162 163 164 165 166 167 171
    175 176 181 182 183 188 189 190 193 194 195 196 197 207 208
$@2 (126)
    on left: 34, on right: 35
$@3 (127)
    on left: 40, on right: 42
$@4 (128)
    on left: 41, on right: 42
expr_list (129)
    on left: 56 57, on right: 31 38 39 56 58 151 178 179 205
opt_expr_list (130)
    on left: 58 59, on right: 42 43 44 46 150 202
opt_comma (131)
    on left: 60 61, on right: 88 115
pattern (132)
    on left: 62 63, on right: 53 62
single_pattern (133)
    on left: 66, on right: 62 63
$@5 (134)
    on left: 64, on right: 66
$@6 (135)
    on left: 65, on right: 66
enum_id_list (136)
    on left: 67 68, on right: 68 88 115
type (137)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 96, on right: 84 90 91 94 97 98 101
    108 136 140
type_list (138)
    on left: 97 98, on right: 84 85 87 97 138 139
type_decl_list (139)
    on left: 99 100, on right: 86 99 119 128 138
type_decl (140)
    on left: 101, on right: 99
formal_args (141)
    on left: 102 103 104, on right: 93 136 137
formal_args_decl_list (142)
    on left: 105 106 107, on right: 102 103 105 106
formal_args_decl (143)
    on left: 108, on right: 105 106 107
decl (144)
    on left: 109 111 112 113 114 115 116 119 120 121 122, on right:
    4
$@7 (145)
    on left: 110, on right: 111
$@8 (146)
    on left: 117, on right: 119
$@9 (147)
    on left: 118, on right: 119
conditional (148)
    on left: 123 124 125 126 127, on right: 122 199
opt_attr_attr (149)
    on left: 128 129, on right: 116
func_hdr (150)
    on left: 130 131 132, on right: 121
func_body (151)
    on left: 133, on right: 35 121 134
anonymous_function (152)
    on left: 134, on right: 49
begin_func (153)
    on left: 135, on right: 134
func_params (154)
    on left: 136 137, on right: 35 92 130 131 132 135
refined_type (155)
    on left: 138 139, on right: 116 120
opt_type (156)
    on left: 140 141, on right: 112 113 114 191 192
init_class (157)
    on left: 142 143 144 145, on right: 112 113 114 191 192
opt_init (158)
    on left: 148 149, on right: 112 113 114 191 192
$@10 (159)
    on left: 146, on right: 148
$@11 (160)
    on left: 147, on right: 148
init (161)
    on left: 150 151 152, on right: 148
opt_attr (162)
    on left: 153 154, on right: 42 43 101 108 112 113 114 116 120 133
    191 192
attr_list (163)
    on left: 155 156, on right: 153 155
attr (164)
    on left: 157 158 159 160 161 162 163 164 165 166 167 168 169 170
    171 172 173 174 175 176, on right: 155 156
stmt (165)
    on left: 177 178 179 180 181 182 183 184 185 186 187 188 189 190
    191 192 193 194 195 196 197 198 199, on right: 181 182 184 193
    194 195 196 200
stmt_list (166)
    on left: 200 201, on right: 1 133 177 194 196 200 205 206
event (167)
    on left: 202, on right: 50 180
case_list (168)
    on left: 203 204, on right: 183 203
case (169)
    on left: 205 206, on right: 203
for_head (170)
    on left: 207 208, on right: 184
local_id_list (171)
    on left: 209 210, on right: 208 209
local_id (172)
    on left: 211, on right: 30 191 192 209 210
global_id (173)
    on left: 213, on right: 112 113 114 115 116 130
$@12 (174)
    on left: 212, on right: 213
event_id (175)
    on left: 215, on right: 120 131 132
$@13 (176)
    on left: 214, on right: 215
global_or_event_id (177)
    on left: 216, on right: 213 215
resolve_id (178)
    on left: 217, on right: 96


state 0

    0 $accept: . bro $end

    TOK_DEBUG  shift, and go to state 1

    $default  reduce using rule 5 (decl_list)

    bro        go to state 2
    decl_list  go to state 3


state 1

    3 bro: TOK_DEBUG . $@1 expr

    $default  reduce using rule 2 ($@1)

    $@1  go to state 4


state 2

    0 $accept: bro . $end

    $end  shift, and go to state 5


state 3

    1 bro: decl_list . stmt_list
    4 decl_list: decl_list . decl

    TOK_ATENDIF      shift, and go to state 6
    TOK_ATELSE       shift, and go to state 7
    TOK_ATIF         shift, and go to state 8
    TOK_ATIFDEF      shift, and go to state 9
    TOK_ATIFNDEF     shift, and go to state 10
    TOK_CONST        shift, and go to state 11
    TOK_EVENT        shift, and go to state 12
    TOK_EXPORT       shift, and go to state 13
    TOK_FUNCTION     shift, and go to state 14
    TOK_GLOBAL       shift, and go to state 15
    TOK_GLOBAL_ATTR  shift, and go to state 16
    TOK_MODULE       shift, and go to state 17
    TOK_REDEF        shift, and go to state 18
    TOK_TYPE         shift, and go to state 19

    TOK_ATENDIF   [reduce using rule 201 (stmt_list)]
    TOK_ATELSE    [reduce using rule 201 (stmt_list)]
    TOK_ATIF      [reduce using rule 201 (stmt_list)]
    TOK_ATIFDEF   [reduce using rule 201 (stmt_list)]
    TOK_ATIFNDEF  [reduce using rule 201 (stmt_list)]
    TOK_CONST     [reduce using rule 201 (stmt_list)]
    TOK_EVENT     [reduce using rule 201 (stmt_list)]
    TOK_FUNCTION  [reduce using rule 201 (stmt_list)]
    $default      reduce using rule 201 (stmt_list)

    decl         go to state 20
    conditional  go to state 21
    func_hdr     go to state 22
    stmt_list    go to state 23


state 4

    3 bro: TOK_DEBUG $@1 . expr

    TOK_CONSTANT  shift, and go to state 24
    TOK_COPY      shift, and go to state 25
    TOK_FUNCTION  shift, and go to state 26
    TOK_ID        shift, and go to state 27
    TOK_LOCAL     shift, and go to state 28
    TOK_MATCH     shift, and go to state 29
    TOK_RECORD    shift, and go to state 30
    TOK_SCHEDULE  shift, and go to state 31
    TOK_SET       shift, and go to state 32
    TOK_TABLE     shift, and go to state 33
    TOK_THIS      shift, and go to state 34
    TOK_VECTOR    shift, and go to state 35
    '|'           shift, and go to state 36
    '+'           shift, and go to state 37
    '-'           shift, and go to state 38
    '/'           shift, and go to state 39
    TOK_DECR      shift, and go to state 40
    TOK_INCR      shift, and go to state 41
    '!'           shift, and go to state 42
    '$'           shift, and go to state 43
    '['           shift, and go to state 44
    '('           shift, and go to state 45

    expr                go to state 46
    pattern             go to state 47
    single_pattern      go to state 48
    anonymous_function  go to state 49


state 5

    0 $accept: bro $end .

    $default  accept


state 6

  126 conditional: TOK_ATENDIF .

    $default  reduce using rule 126 (conditional)


state 7

  127 conditional: TOK_ATELSE .

    $default  reduce using rule 127 (conditional)


state 8

  123 conditional: TOK_ATIF . '(' expr ')'

    '('  shift, and go to state 50


state 9

  124 conditional: TOK_ATIFDEF . '(' TOK_ID ')'

    '('  shift, and go to state 51


state 10

  125 conditional: TOK_ATIFNDEF . '(' TOK_ID ')'

    '('  shift, and go to state 52


state 11

  113 decl: TOK_CONST . global_id opt_type init_class opt_init opt_attr ';'

    $default  reduce using rule 212 ($@12)

    global_id  go to state 53
    $@12       go to state 54


state 12

  120 decl: TOK_EVENT . event_id ':' refined_type opt_attr ';'
  131 func_hdr: TOK_EVENT . event_id func_params

    $default  reduce using rule 214 ($@13)

    event_id  go to state 55
    $@13      go to state 56


state 13

  111 decl: TOK_EXPORT . '{' $@7 decl_list '}'

    '{'  shift, and go to state 57


state 14

  130 func_hdr: TOK_FUNCTION . global_id func_params

    $default  reduce using rule 212 ($@12)

    global_id  go to state 58
    $@12       go to state 54


state 15

  112 decl: TOK_GLOBAL . global_id opt_type init_class opt_init opt_attr ';'

    $default  reduce using rule 212 ($@12)

    global_id  go to state 59
    $@12       go to state 54


state 16

  119 decl: TOK_GLOBAL_ATTR . ':' $@8 '{' type_decl_list '}' ';' $@9

    ':'  shift, and go to state 60


state 17

  109 decl: TOK_MODULE . TOK_ID ';'

    TOK_ID  shift, and go to state 61


state 18

  114 decl: TOK_REDEF . global_id opt_type init_class opt_init opt_attr ';'
  115     | TOK_REDEF . TOK_ENUM global_id TOK_ADD_TO '{' enum_id_list opt_comma '}' ';'
  132 func_hdr: TOK_REDEF . TOK_EVENT event_id func_params

    TOK_ENUM   shift, and go to state 62
    TOK_EVENT  shift, and go to state 63

    $default  reduce using rule 212 ($@12)

    global_id  go to state 64
    $@12       go to state 54


state 19

  116 decl: TOK_TYPE . global_id ':' refined_type opt_attr opt_attr_attr ';'

    $default  reduce using rule 212 ($@12)

    global_id  go to state 65
    $@12       go to state 54


state 20

    4 decl_list: decl_list decl .

    $default  reduce using rule 4 (decl_list)


state 21

  122 decl: conditional .

    $default  reduce using rule 122 (decl)


state 22

  121 decl: func_hdr . func_body

    TOK_ATTR_ADD_FUNC            shift, and go to state 66
    TOK_ATTR_ENCRYPT             shift, and go to state 67
    TOK_ATTR_DEFAULT             shift, and go to state 68
    TOK_ATTR_OPTIONAL            shift, and go to state 69
    TOK_ATTR_REDEF               shift, and go to state 70
    TOK_ATTR_ROTATE_INTERVAL     shift, and go to state 71
    TOK_ATTR_ROTATE_SIZE         shift, and go to state 72
    TOK_ATTR_DEL_FUNC            shift, and go to state 73
    TOK_ATTR_EXPIRE_FUNC         shift, and go to state 74
    TOK_ATTR_EXPIRE_CREATE       shift, and go to state 75
    TOK_ATTR_EXPIRE_READ         shift, and go to state 76
    TOK_ATTR_EXPIRE_WRITE        shift, and go to state 77
    TOK_ATTR_PERSISTENT          shift, and go to state 78
    TOK_ATTR_SYNCHRONIZED        shift, and go to state 79
    TOK_ATTR_DISABLE_PRINT_HOOK  shift, and go to state 80
    TOK_ATTR_RAW_OUTPUT          shift, and go to state 81
    TOK_ATTR_MERGEABLE           shift, and go to state 82
    TOK_ATTR_PRIORITY            shift, and go to state 83
    TOK_ATTR_GROUP               shift, and go to state 84

    $default  reduce using rule 154 (opt_attr)

    func_body  go to state 85
    opt_attr   go to state 86
    attr_list  go to state 87
    attr       go to state 88


state 23

    1 bro: decl_list stmt_list .
  200 stmt_list: stmt_list . stmt

    TOK_ADD       shift, and go to state 89
    TOK_ALARM     shift, and go to state 90
    TOK_ATENDIF   shift, and go to state 6
    TOK_ATELSE    shift, and go to state 7
    TOK_ATIF      shift, and go to state 8
    TOK_ATIFDEF   shift, and go to state 9
    TOK_ATIFNDEF  shift, and go to state 10
    TOK_BREAK     shift, and go to state 91
    TOK_CONST     shift, and go to state 92
    TOK_CONSTANT  shift, and go to state 24
    TOK_COPY      shift, and go to state 25
    TOK_DELETE    shift, and go to state 93
    TOK_EVENT     shift, and go to state 94
    TOK_FOR       shift, and go to state 95
    TOK_FUNCTION  shift, and go to state 26
    TOK_ID        shift, and go to state 27
    TOK_IF        shift, and go to state 96
    TOK_LOCAL     shift, and go to state 97
    TOK_MATCH     shift, and go to state 29
    TOK_NEXT      shift, and go to state 98
    TOK_PRINT     shift, and go to state 99
    TOK_RECORD    shift, and go to state 30
    TOK_RETURN    shift, and go to state 100
    TOK_SCHEDULE  shift, and go to state 31
    TOK_SET       shift, and go to state 32
    TOK_SWITCH    shift, and go to state 101
    TOK_TABLE     shift, and go to state 33
    TOK_THIS      shift, and go to state 34
    TOK_VECTOR    shift, and go to state 35
    TOK_WHEN      shift, and go to state 102
    '|'           shift, and go to state 36
    '+'           shift, and go to state 37
    '-'           shift, and go to state 38
    '/'           shift, and go to state 39
    TOK_DECR      shift, and go to state 40
    TOK_INCR      shift, and go to state 41
    '!'           shift, and go to state 42
    '$'           shift, and go to state 43
    '['           shift, and go to state 44
    '('           shift, and go to state 45
    '{'           shift, and go to state 103
    ';'           shift, and go to state 104

    $default  reduce using rule 1 (bro)

    expr                go to state 105
    pattern             go to state 47
    single_pattern      go to state 48
    conditional         go to state 106
    anonymous_function  go to state 49
    stmt                go to state 107
    for_head            go to state 108


state 24

   52 expr: TOK_CONSTANT .

    $default  reduce using rule 52 (expr)


state 25

    7 expr: TOK_COPY . '(' expr ')'

    '('  shift, and go to state 109


state 26

  134 anonymous_function: TOK_FUNCTION . begin_func func_body

    '('  shift, and go to state 110

    begin_func   go to state 111
    func_params  go to state 112


state 27

   51 expr: TOK_ID .

    $default  reduce using rule 51 (expr)


state 28

   30 expr: TOK_LOCAL . local_id '=' expr

    TOK_ID  shift, and go to state 113

    local_id  go to state 114


state 29

   45 expr: TOK_MATCH . expr TOK_USING expr

    TOK_CONSTANT  shift, and go to state 24
    TOK_COPY      shift, and go to state 25
    TOK_FUNCTION  shift, and go to state 26
    TOK_ID        shift, and go to state 27
    TOK_LOCAL     shift, and go to state 28
    TOK_MATCH     shift, and go to state 29
    TOK_RECORD    shift, and go to state 30
    TOK_SCHEDULE  shift, and go to state 31
    TOK_SET       shift, and go to state 32
    TOK_TABLE     shift, and go to state 33
    TOK_THIS      shift, and go to state 34
    TOK_VECTOR    shift, and go to state 35
    '|'           shift, and go to state 36
    '+'           shift, and go to state 37
    '-'           shift, and go to state 38
    '/'           shift, and go to state 39
    TOK_DECR      shift, and go to state 40
    TOK_INCR      shift, and go to state 41
    '!'           shift, and go to state 42
    '$'           shift, and go to state 43
    '['           shift, and go to state 44
    '('           shift, and go to state 45

    expr                go to state 115
    pattern             go to state 47
    single_pattern      go to state 48
    anonymous_function  go to state 49


state 30

   39 expr: TOK_RECORD . '(' expr_list ')'

    '('  shift, and go to state 116


state 31

   50 expr: TOK_SCHEDULE . expr '{' event '}'

    TOK_CONSTANT  shift, and go to state 24
    TOK_COPY      shift, and go to state 25
    TOK_FUNCTION  shift, and go to state 26
    TOK_ID        shift, and go to state 27
    TOK_LOCAL     shift, and go to state 28
    TOK_MATCH     shift, and go to state 29
    TOK_RECORD    shift, and go to state 30
    TOK_SCHEDULE  shift, and go to state 31
    TOK_SET       shift, and go to state 32
    TOK_TABLE     shift, and go to state 33
    TOK_THIS      shift, and go to state 34
    TOK_VECTOR    shift, and go to state 35
    '|'           shift, and go to state 36
    '+'           shift, and go to state 37
    '-'           shift, and go to state 38
    '/'           shift, and go to state 39
    TOK_DECR      shift, and go to state 40
    TOK_INCR      shift, and go to state 41
    '!'           shift, and go to state 42
    '$'           shift, and go to state 43
    '['           shift, and go to state 44
    '('           shift, and go to state 45

    expr                go to state 117
    pattern             go to state 47
    single_pattern      go to state 48
    anonymous_function  go to state 49


state 32

   43 expr: TOK_SET . '(' opt_expr_list ')' opt_attr

    '('  shift, and go to state 118


state 33

   42 expr: TOK_TABLE . '(' $@3 opt_expr_list ')' $@4 opt_attr

    '('  shift, and go to state 119


state 34

   54 expr: TOK_THIS .

    $default  reduce using rule 54 (expr)


state 35

   44 expr: TOK_VECTOR . '(' opt_expr_list ')'

    '('  shift, and go to state 120


state 36

   55 expr: '|' . expr '|'

    TOK_CONSTANT  shift, and go to state 24
    TOK_COPY      shift, and go to state 25
    TOK_FUNCTION  shift, and go to state 26
    TOK_ID        shift, and go to state 27
    TOK_LOCAL     shift, and go to state 28
    TOK_MATCH     shift, and go to state 29
    TOK_RECORD    shift, and go to state 30
    TOK_SCHEDULE  shift, and go to state 31
    TOK_SET       shift, and go to state 32
    TOK_TABLE     shift, and go to state 33
    TOK_THIS      shift, and go to state 34
    TOK_VECTOR    shift, and go to state 35
    '|'           shift, and go to state 36
    '+'           shift, and go to state 37
    '-'           shift, and go to state 38
    '/'           shift, and go to state 39
    TOK_DECR      shift, and go to state 40
    TOK_INCR      shift, and go to state 41
    '!'           shift, and go to state 42
    '$'           shift, and go to state 43
    '['           shift, and go to state 44
    '('           shift, and go to state 45

    expr                go to state 121
    pattern             go to state 47
    single_pattern      go to state 48
    anonymous_function  go to state 49


state 37

   12 expr: '+' . expr

    TOK_CONSTANT  shift, and go to state 24
    TOK_COPY      shift, and go to state 25
    TOK_FUNCTION  shift, and go to state 26
    TOK_ID        shift, and go to state 27
    TOK_LOCAL     shift, and go to state 28
    TOK_MATCH     shift, and go to state 29
    TOK_RECORD    shift, and go to state 30
    TOK_SCHEDULE  shift, and go to state 31
    TOK_SET       shift, and go to state 32
    TOK_TABLE     shift, and go to state 33
    TOK_THIS      shift, and go to state 34
    TOK_VECTOR    shift, and go to state 35
    '|'           shift, and go to state 36
    '+'           shift, and go to state 37
    '-'           shift, and go to state 38
    '/'           shift, and go to state 39
    TOK_DECR      shift, and go to state 40
    TOK_INCR      shift, and go to state 41
    '!'           shift, and go to state 42
    '$'           shift, and go to state 43
    '['           shift, and go to state 44
    '('           shift, and go to state 45

    expr                go to state 122
    pattern             go to state 47
    single_pattern      go to state 48
    anonymous_function  go to state 49


state 38

   11 expr: '-' . expr
